--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 
         <div id="startMenu" class="overlay hidden">
             <div class="ui-panel text-center">
-                <h1 class="text-5xl font-bold mb-2">Data <span class="brand-red">Dash</span></h1>
+                <h1 class="text-5xl font-bold mb-2">Cy<span class="brand-red">Dash</span></h1>
                 <p class="mb-4 text-gray-300">A Cyber Security Challenge</p>
 
                 <div id="dailyBounty"
@@ -810,4 +810,5 @@
 
 
 </html>
+
 
